Closed Bug 1799107 Opened 3 years ago Closed 3 years ago

Worklet.addModule should return AbortError when importing a non-existent script

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: allstars.chh, Assigned: allstars.chh)

Details

Attachments

(1 file)

According to https://html.spec.whatwg.org/multipage/worklets.html#dom-worklet-addmodule

If the script is null, 'AbortError' DOMException should be thrown.
But in the implementation, a NetworkError is thrown actually.

https://searchfox.org/mozilla-central/rev/eddb810ffd5499f0984123fe4bfea6064ebad3c8/dom/worklet/Worklet.cpp#183

Pushed by allstars.chh@gmail.com: https://hg.mozilla.org/integration/autoland/rev/943068a995f1 Worklet.addModule should return AbortError when importing a non-existent script. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: