Bug 1799107 - Worklet.addModule should return AbortError when importing a non-existent script. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D161273